force-app/src/objects/LTE__Menu_Item__c.object
<CustomObject>
    <description>Menu Items create a hierarchy of links to pages, urls, actions, topics, and objects.</description>
    <fields>
        <fullName>LTE__Default_List_View__c</fullName>
        <description>** Required for Type Salesforce Object ** Defines the API name of the List View used for the Salesforce object page</description>
        <inlineHelpText>** Required for Type Salesforce Object ** Defines the API name of the List View used for the Salesforce object page</inlineHelpText>
        <label>Default List View</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTE__Display_Order__c</fullName>
        <description>The numerical value defined in this field dictates the order this menu item will display in the member community.</description>
        <inlineHelpText>The numerical value defined in this field dictates the order this menu item will display in the member community.</inlineHelpText>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTE__Enable_Access_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field restricts the visibility of the menu item to those site users that have the defined badges.</description>
        <inlineHelpText>This field restricts the visibility of the menu item to those site users that have the defined badges.</inlineHelpText>
        <label>Enable Access Permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTE__Is_Profile_Menu_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the menu item to be the profile navigational item.</description>
        <inlineHelpText>Defines the menu item to be the profile navigational item.</inlineHelpText>
        <label>Is Profile Menu Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTE__Object_Type__c</fullName>
        <description>** Required for Type Salesforce Object ** Defines the API name of the object used for the Salesforce object page</description>
        <inlineHelpText>** Required for Type Salesforce Object ** Defines the API name of the object used for the Salesforce object page</inlineHelpText>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTE__Open_Link_in_New_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** Used for Type External URL ** When checked, the menu item will create a new tab in the browser for navigation to the URL destination.</description>
        <inlineHelpText>** Used for Type External URL ** When checked, the menu item will create a new tab in the browser for navigation to the URL destination.</inlineHelpText>
        <label>Open Link in New Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTE__Open_Link_in_Same_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** Used for Type External URL ** When checked, the menu item will create a new tab in the browser for navigation to the URL destination.</description>
        <inlineHelpText>** Used for Type External URL ** When checked, the menu item will create a new tab in the browser for navigation to the URL destination.</inlineHelpText>
        <label>Open Link in Same Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTE__Parent_Menu_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated when a menu item is displayed as a drop down for navigation in the community.</description>
        <inlineHelpText>Populated when a menu item is displayed as a drop down for navigation in the community.</inlineHelpText>
        <label>Parent Menu Item</label>
        <referenceTo>LTE__Menu_Item__c</referenceTo>
        <relationshipName>Menu_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LTE__Profile_Menu_Item_Component__c</fullName>
        <description>This field defines the component to be displayed for the profile menu item.</description>
        <inlineHelpText>This field defines the component to be displayed for the profile menu item.</inlineHelpText>
        <label>Profile Menu Item Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTE__Publicly_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked this menu item is displayed to unauthenticated users.</description>
        <inlineHelpText>When checked this menu item is displayed to unauthenticated users.</inlineHelpText>
        <label>Publicly Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTE__Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>** Required ** Relates the menu items to the site.</description>
        <inlineHelpText>** Required ** Relates the menu items to the site.</inlineHelpText>
        <label>Community Site</label>
        <referenceTo>LTE__Site__c</referenceTo>
        <relationshipLabel>Community Menu Items</relationshipLabel>
        <relationshipName>Community_Menu_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LTE__Type__c</fullName>
        <defaultValue>&quot;Community Page&quot;</defaultValue>
        <description>Defines the type of menu navigation for this Menu Item.</description>
        <inlineHelpText>Defines the type of menu navigation for this Menu Item.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>External URL</fullName>
                </value>
                <value>
                    <fullName>Menu Label</fullName>
                </value>
                <value>
                    <fullName>Salesforce Object</fullName>
                </value>
                <value>
                    <fullName>Community Page</fullName>
                    <isActive>false</isActive>
                    <label>Community Page</label>
                </value>
                <value>
                    <fullName>Global Action</fullName>
                    <isActive>false</isActive>
                    <label>Global Action</label>
                </value>
                <value>
                    <fullName>Navigational Topic</fullName>
                    <isActive>false</isActive>
                    <label>Navigational Topic</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LTE__URL__c</fullName>
        <description>** Required for Type External URL ** This field references URL field for navigation.</description>
        <inlineHelpText>** Required for Type External URL ** This field references URL field for navigation.</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Community Menu Item</label>
    <nameField>
        <label>Community Menu Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Menu Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>